--- a/App/www/app/Form/forms.html
+++ b/App/www/app/Form/forms.html
@@ -23,15 +23,17 @@
             <ul>
               <li ng-repeat="quest in QuestionnaireList" class="nth-color">
                 <md-list>
-                  <md-list-item class="secondary-button-padding">
+                <div ng-click="goToForm(quest.RelSurveyPatientId)">
+                  <md-list-item class="secondary-button-padding" >
                     <p class="q-title">{{quest.QuestionnaireName}}</p>
-                    <md-button class="incomplete-button" ng-if="!quest.IsComplete" ng-click="goToForm(quest.RelSurveyPatientId)">Incomplete</md-button>
-                    <md-button class="complete-button" ng-if="quest.IsComplete" ng-click="goToForm(quest.RelSurveyPatientId)"> Completed Form</md-button>
+                    <md-button class="incomplete-button" ng-if="!quest.IsComplete" >Incomplete</md-button>
+                    <md-button class="complete-button" ng-if="quest.IsComplete" > Completed Form</md-button>
                   </md-list-item>
-                  <md-list-item>
+                  <md-list-item >
                     <p class="completion-label">% Complete:</p>
                     <md-progress-linear class="md-primary md-hue-1" md-mode="determinate" value="{{quest.PercentComplete}}"></md-progress-linear>
                   </md-list-item>
+                  </div>
                 </md-list>
               </li>
             </ul>
