--- a/App/www/app/Form/forms.html
+++ b/App/www/app/Form/forms.html
@@ -31,7 +31,7 @@
                   </md-list-item>
                   <md-list-item >
                     <p class="completion-label">% Complete:</p>
-                    <md-progress-linear class="md-primary md-hue-1" md-mode="determinate" value="{{quest.PercentComplete}}"></md-progress-linear>
+                    <md-progress-linear class="progress-bar-format md-primary md-hue-1" md-mode="determinate" value="{{quest.PercentComplete}}"></md-progress-linear>
                   </md-list-item>
                   </div>
                 </md-list>
