fixed scrolling issues

--- a/App/www/app/Review/review.html
+++ b/App/www/app/Review/review.html
@@ -7,7 +7,7 @@
     <md-progress-circular class="md-primary md-hue-2" ng-hide="qLoaded" md-mode="indeterminate" md-diameter="715">Saving...</md-progress-circular>
     </div>
    
-    <div ng-hide="saving">
+    <div class="outer" ng-hide="saving" >
     <button class="button button-rounded fab" ng-click="backToList()">
       <i class="material-icons">
         arrow_back
