fixed double login

--- a/App/www/app/Login/login.html
+++ b/App/www/app/Login/login.html
@@ -1,6 +1,6 @@
 <div class="row responsive-md">
 	<div class="col">
-		<form name="loginForm" ng-submit="login()" novalidate>
+		<form name="loginForm" novalidate>
 			<h1>Please Login</h1>
   			<div ng-class="{ 'has-error' : loginForm.name.$invalid && !loginForm.name.$pristine }">
 				<input 	name="name"
