--- a/App/www/app/Review/review.html
+++ b/App/www/app/Review/review.html
@@ -1,4 +1,4 @@
- 
+
 <div class="reviewHeader">Please review</div>
   <div ng-controller="ReviewCtrl">
   </div>
@@ -15,6 +15,9 @@
     </button>
     <button class="submit" ng-click="submit()">
       Submit
+    </button>
+      <button class="submit2" ng-click="submit()">
+      <i class="material-icons">check</i>
     </button>
 
 
