--- a/App/www/index.html
+++ b/App/www/index.html
@@ -18,6 +18,7 @@
   <!-- Angular Material Library -->
   <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
 
+   <!-- Compiled and minified CSS -->
 
 
 
