--- a/App/www/app/Review/review.html
+++ b/App/www/app/Review/review.html
@@ -15,7 +15,7 @@
     </button>
 
      <button class="btn waves-effect waves-light" type="submit" name="action" ng-click="submit()">Submit
-    <i class="material-icons right">send</i>
+    <i class="material-icons right">arrow_forward</i>
   </button>
 
     <div class="cardSection">
@@ -125,10 +125,8 @@
   </div>
 
 
-
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
 
-  <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
 
 
