Added in switch for just using local json objects (if server isn't running during demo)

--- a/App/www/app/Login/login.html
+++ b/App/www/app/Login/login.html
@@ -28,5 +28,8 @@
 			</div>
 			<button class="login" ng-disabled="loginForm.$invalid" ng-click="login()">Login</button>
 		</form>
+			<md-switch class="switch-align" ng-model="useLocal" aria-label="Local">
+			</md-switch>
 	</div>
+	
 </div>
